--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
     "preview": "vite preview",
-    "format": "prettier --write .",
+    "lint": "biome lint .",
+    "format": "biome format --write .",
+    "check": "biome check .",
     "prepare": "husky"
   },
   "dependencies": {
@@ -22,24 +23,21 @@
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
-    "@eslint/js": "^9.36.0",
+    "@biomejs/biome": "2.2.4",
     "@tanstack/react-query-devtools": "^5.90.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react-swc": "^4.1.0",
-    "eslint": "^9.36.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.22",
-    "globals": "^16.4.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.1",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.44.1",
     "vite": "^7.1.7",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "lint-staged": {
-    "*.{js,ts,tsx}": "eslint --fix",
-    "*.{js,ts,tsx,css,md}": "prettier --write"
+    "*.{ts,tsx,js,jsx,json,css,md}": [
+      "biome format --write",
+      "biome lint --apply"
+    ]
   }
 }
