--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "preview": "vite preview",
-    "lint": "biome lint .",
+    "lint": "biome lint --write .",
     "format": "biome format --write .",
     "check": "biome check .",
     "prepare": "husky"
