--- a/biome.json
+++ b/biome.json
@@ -6,8 +6,7 @@
     "useIgnoreFile": true
   },
   "files": {
-    "ignoreUnknown": false,
-    "includes": ["src/**/*"]
+    "ignoreUnknown": false
   },
   "formatter": {
     "enabled": true,
