--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-query": "^5.90.2",
+    "@types/node": "^24.6.2",
     "axios": "^1.12.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -29,6 +30,7 @@
     "@vitejs/plugin-react-swc": "^4.1.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.1",
+    "msw": "^2.11.3",
     "typescript": "~5.8.3",
     "vite": "^7.1.7",
     "vite-tsconfig-paths": "^5.1.4"
